--- a/docs/less/blocks/_base.less
+++ b/docs/less/blocks/_base.less
@@ -109,6 +109,7 @@ button{
     padding-right: 42px;
     padding-top: 13px;
     height: 64px;
+    color: black;
 
     background-color: rgb(0, 174, 255);
     border-radius: 32px;
