--- a/docs/less/blocks/_header.less
+++ b/docs/less/blocks/_header.less
@@ -1,14 +1,14 @@
 header{
     padding-top: 60px;
     padding-bottom: 240px;
-    background: url("../../img/header/lines.jpg") repeat-y center 0 / auto;       
+    background: url("../img/header/lines.jpg") repeat-y center 0 / auto;       
 }
 
 .header__content{
     margin-left: auto;
     margin-right: auto;
     max-width: 1600px;
-    background: url('../../img/header/header-bg.png') no-repeat center 325px / auto;
+    background: url('../img/header/header-bg.png') no-repeat center 325px / auto;
 }
 
 .header__nav-wrapper{
@@ -34,6 +34,7 @@ header{
     z-index: 2;
     font-size: 42px;
     font-weight: 800;
+    color: black;
     
     &::after{
         content: "";
@@ -268,6 +269,7 @@ header{
     padding-top: 9px;
     height: 64px;
     margin-left: 12px;
+    color: black;
 
     border: solid 4px #464646;
     border-radius: 32px;
