--- a/docs/less/blocks/_header.less
+++ b/docs/less/blocks/_header.less
@@ -1,14 +1,8 @@
 header{
     padding-top: 60px;
     padding-bottom: 240px;
-    background: url("../img/header/lines.jpg") repeat-y center 0 / auto;       
-}
-
-.header__content{
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1600px;
-    background: url('../img/header/header-bg.png') no-repeat center 325px / auto;
+    background: url("../img/header/lines.jpg") repeat-y center 0 / auto;
+    overflow: hidden;       
 }
 
 .header__nav-wrapper{
@@ -222,11 +216,11 @@ header{
 }
 
 .header__info{
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    padding-bottom: 695px;
 
     // Платншет
     @media (min-width: 768px){
@@ -282,4 +276,12 @@ header{
         box-shadow: 0 0 5px rgb(0, 174, 255);
         background-color: rgba(0, 174, 255, 0.527);
     }
+}
+
+.header__bg-img{
+    margin-top: -110px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1600px;
 }
