--- a/docs/less/blocks/_section-skills.less
+++ b/docs/less/blocks/_section-skills.less
@@ -1,60 +1,143 @@
+.sections-skills__row{
+    display: flex;
+    flex-direction: column;
+    max-width: 410px;
+    margin-left: auto;
+    margin-right: auto;
+
+    // Планшет 
+    @media(min-width: 768px){
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 850px;
+    }
+
+    //Десктоп
+    @media(min-width: 1200px){
+        max-width: unset;
+    }
+}
+
 .sections-skills__desc{
-    width: 54%;
+
+    // Планшет 
+    @media(min-width: 768px){
+        width: 50%;
+    }
+
+    //Десктоп
+    @media(min-width: 1200px){
+        width: 54%;
+    }
 }
 
 .sections-skills__title-list{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 800;
-    margin-bottom: 25px;
+    margin-bottom: 21px;
+    line-height: 1.35;
+    margin-bottom: 29px;
+
+    // Планшет 
+    @media(min-width: 768px){
+        margin-bottom: 21px;
+        font-size: 32px;
+    }
+
+    //Десктоп
+    @media(min-width: 1200px){
+        line-height: unset;
+        font-size: 40px;
+        margin-bottom: 25px;
+    }
 }
 
 .section-skills__contacts{
-    padding-left: 166px;
-}
 
-.sections-skills__row{
-    display: flex;
+    // Планшет 
+    @media(min-width: 768px){
+        width: 45%;
+    }
+
+    .contacts-social{
+        margin-bottom: 17px;
+    }
 }
 
 .section-skills__list{
-    margin-bottom: 38px;
+    margin-bottom: 37px;
 }
 
 .section-skills__list-item{
     position: relative;
-    font-size: 24px;
-    margin-left: 33px;
-    margin-bottom: 3px;
+    font-size: 18px;
+    margin-bottom: 17px;
+    line-height: 1.15;
 
     &:last-child{
         margin-bottom: 0;
     }
 
-    &::after{
-        content: "";
-        height: 2px;
-        width: 23px;
-        background-color: gray;
-        position: absolute;
-        left: -31px;
-        top: 18px;
+    // Планшет 
+    @media(min-width: 768px){
+        line-height: unset;
+        margin-bottom: 8px;
+    }
+
+    //Десктоп
+    @media(min-width: 1200px){
+        font-size: 24px;
+        margin-left: 33px;
+        margin-bottom: 3px;
+
+        &::after{
+            content: "";
+            height: 2px;
+            width: 23px;
+            background-color: gray;
+            position: absolute;
+            left: -31px;
+            top: 18px;
+        }
     }
 }
 
-
 .sections-skills__title-social{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 800;
-    margin-bottom: 31px;
-}
+    margin-bottom: 19px;
 
-.section-skills__contacts-social{
-    display: flex;
-    margin-bottom: 25px;
+    // Планшет 
+    @media(min-width: 768px){
+        margin-bottom: 18px;
+        font-size: 32px;
+    }
+
+    //Десктоп
+    @media(min-width: 1200px){
+        font-size: 40px;
+        margin-bottom: 31px;
+    }
 }
 
 .section-skills__mail{
     color: black;
     text-decoration: underline;
-    font-size: 24px;
+    font-size: 18px;
+    transition: 0.3s;
+
+    &:hover{
+        text-decoration: underline;
+        color: rgb(0, 174, 255); 
+    }
+
+    // Планшет 
+    @media(min-width: 768px){
+        font-size: 20px;
+    }
+
+    //Десктоп
+    @media(min-width: 1200px){
+        font-size: 24px;
+    }
 }
