--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -1,3 +1,4 @@
 @import "./blocks/_base.less";
 @import "./blocks/_header.less";
 @import "./blocks/_section-skills.less";
+@import "./blocks/_section-portfolio.less";
