--- a/docs/less/blocks/_section-portfolio.less
+++ b/docs/less/blocks/_section-portfolio.less
@@ -20,6 +20,8 @@
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 40px;
+    padding-top: 60px;
+    margin-top: -60px;
 
     // Планшет 
     @media(min-width: 768px){
@@ -136,7 +138,8 @@
     @media(min-width: 1200px){
         max-width: unset;
         margin-bottom: 40px;
-        width: 30%;
+        width: 34%;
+        max-width: 360px;
 
         &:last-child{
             display: block;
@@ -147,7 +150,8 @@
 .section-portfolio__project--big{
     @media(min-width: 1200px){
         font-size: 32px;
-        width: 47%;
+        width: 49%;
+        max-width: 555px;
     }
 }
 
