--- a/docs/less/blocks/_section-skills.less
+++ b/docs/less/blocks/_section-skills.less
@@ -37,6 +37,8 @@
     margin-bottom: 21px;
     line-height: 1.35;
     margin-bottom: 29px;
+    padding-top: 350px;
+    margin-top: -350px;
 
     // Планшет 
     @media(min-width: 768px){
@@ -57,6 +59,7 @@
     // Планшет 
     @media(min-width: 768px){
         width: 45%;
+        max-width: 360px;
     }
 
     .contacts-social{
