--- a/docs/less/blocks/_header.less
+++ b/docs/less/blocks/_header.less
@@ -62,19 +62,21 @@ header{
         content: "";
         position: absolute;
         bottom: 10px;
-        left: 0px;
+        left: -3px;
         height: 10px;
-        width: 100%;
+        width: 107%;
         background-color: rgb(0, 174, 255);
         z-index: -1;
-        transition: 0.2s;
+        transition: 0.5s;
     }
 
     &:hover{
         cursor: pointer;
-        color: rgba(0, 0, 0, 0.747);
     }
 
+    &:hover::after{
+        width: 0;
+    }
 }
 
 .header__nav{
@@ -98,6 +100,11 @@ header{
 
     transition: 0.5s;
 
+    .section-skills__mail{
+        color: rgb(0, 174, 255);
+        display: none;
+    }
+
     .contacts-social{
         display: none;
     }
@@ -117,29 +124,47 @@ header{
     }
 }
 
+.header__nav .contacts-social {
+    margin-bottom: 30px;
+
+    .contacts-social-item{
+        margin-right: 20px;
+    }   
+}
+
 .header__nav.active{
     transform: translateX(0%);
+    padding-top: 110px;
+
     .contacts-social{
         display: flex;
+    }
+
+    .section-skills__mail{
+        display: inline-block;
+    }
+
+    .header__nav-item{
+        margin-bottom: 10px;
+
+        &:nth-last-child(3){
+            margin-bottom: 40px;
+        }
     }
 }
 
 .header__nav-item{
-    margin-bottom: 10px;
+
     position: relative;
     z-index: 2;
     color: black;
-
-    &:nth-last-child(2){
-        margin-bottom: 20px;
-    }
 
     //Десктоп
     @media(min-width: 1200px){
         margin-right: 73px;
         margin-bottom: 0;
 
-        &:last-child{
+        &:nth-last-child(3){
             margin-right: 0;
         }
 
