--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -2,3 +2,4 @@
 @import "./blocks/_header.less";
 @import "./blocks/_section-skills.less";
 @import "./blocks/_section-portfolio.less";
+@import "./blocks/_section-how-work.less";
