--- a/docs/less/blocks/_base.less
+++ b/docs/less/blocks/_base.less
@@ -117,6 +117,12 @@ button{
     }
 }
 
+.underline--name{
+    &::after{
+        left: -9px;
+    }
+}
+
 .title{
     display: inline-block;
     font-size: 42px;
